fix safari overflow scroll

--- a/src/assets/scss/global/_layout.scss
+++ b/src/assets/scss/global/_layout.scss
@@ -71,14 +71,13 @@
 ====================================== FULL-HEIGHT
 =================================== */
 
+
 html,
 body {
   min-height: 100%;
   width: 100%;
-}
-
-body {
   overflow-x: hidden;
+	position: relative;
 }
 
 /* ===================================
